; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_irq.c_gen11_reset_guc_interrupts.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_irq.c_gen11_reset_guc_interrupts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_guc = type { i32 }
%struct.intel_gt = type { i32 }

@GEN11_GUC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gen11_reset_guc_interrupts(%struct.intel_guc* %0) #0 {
  %2 = alloca %struct.intel_guc*, align 8
  %3 = alloca %struct.intel_gt*, align 8
  store %struct.intel_guc* %0, %struct.intel_guc** %2, align 8
  %4 = load %struct.intel_guc*, %struct.intel_guc** %2, align 8
  %5 = call %struct.intel_gt* @guc_to_gt(%struct.intel_guc* %4)
  store %struct.intel_gt* %5, %struct.intel_gt** %3, align 8
  %6 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %7 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %6, i32 0, i32 0
  %8 = call i32 @spin_lock_irq(i32* %7)
  %9 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %10 = load i32, i32* @GEN11_GUC, align 4
  %11 = call i32 @gen11_gt_reset_one_iir(%struct.intel_gt* %9, i32 0, i32 %10)
  %12 = load %struct.intel_gt*, %struct.intel_gt** %3, align 8
  %13 = getelementptr inbounds %struct.intel_gt, %struct.intel_gt* %12, i32 0, i32 0
  %14 = call i32 @spin_unlock_irq(i32* %13)
  ret void
}

declare dso_local %struct.intel_gt* @guc_to_gt(%struct.intel_guc*) #1

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @gen11_gt_reset_one_iir(%struct.intel_gt*, i32, i32) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
